This is a combination of 3 commits.
Commit 1

(git rebase practice)

Commit 2

(git rebase practice)

Commit 3

(git rebase practice)

--- a/web/assets/css/_settings.scss
+++ b/web/assets/css/_settings.scss
@@ -4,3 +4,6 @@
 // Makes it possible to quickly specify a lot of global styles, such as fonts, colours and layout options.
 
 $blue: #3ba1b2;
+$red: red;
+$orange: orange;
+$white: white;
