This is a combination of 2 commits.
Commit 11

(git rebase practice)

Commit 13

(git rebase practice)

--- a/web/assets/css/_settings.scss
+++ b/web/assets/css/_settings.scss
@@ -10,7 +10,9 @@ $white: white;
 $black: black;
 $pink: pink;
 $yellow: yellow;
+$light-yellow: lightYellow;
 $grey: grey;
+$light-grey: lightGrey;
 $green: green;
 $light-green; lightGreen;
 $dark-green: darkGreen;
