--- a/web/assets/css/_settings.scss
+++ b/web/assets/css/_settings.scss
@@ -11,6 +11,7 @@ $black: black;
 $pink: pink;
 $yellow: yellow;
 $light-yellow: lightYellow;
+$brown: brown;
 $grey: grey;
 $light-grey: lightGrey;
 $green: green;
