This is a combination of 2 commits. This is the 1st commit message:
Add _utils.scss which is from Wellcome project

This is the commit message #2:

Commit 15

(Git rebase practice)

--- a/web/assets/css/_settings.scss
+++ b/web/assets/css/_settings.scss
@@ -14,6 +14,7 @@ $light-yellow: lightYellow;
 $brown: brown;
 $grey: grey;
 $light-grey: lightGrey;
+$dark-grey: darkGrey;
 $green: green;
 $light-green; lightGreen;
 $dark-green: darkGreen;
